--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=${APP_NAME}
-spring.datasource.driver-class-name=${DB_DRIVER}
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO}
-spring.jpa.show-sql=${SHOW_SQL}
-spring.jpa.database-platform=${JPA_PLATFORM}
+spring.application.name=WeatherApp
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://switchyard.proxy.rlwy.net:14521/weather
+spring.datasource.username=root
+spring.datasource.password=KpKeOeYpCGTmHYYwrxZWkCPOTRdTXEpI
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
